--- a/app/src/main/res/layout/answer_option_element.xml
+++ b/app/src/main/res/layout/answer_option_element.xml
@@ -24,6 +24,12 @@
                 android:paddingEnd="10dp"
                 android:layout_marginBottom="5dp"
                 android:text="TextView" />
+            <ProgressBar
+                android:id="@+id/answer_option_progress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:indeterminateDrawable="@drawable/progress"/>
 
             <ImageView
                 android:id="@+id/answer_option_image"
