--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -137,6 +137,15 @@ android:layout_height="match_parent"
         android:src="@drawable/ic_menu_gallery"
         android:visibility="gone" />
 
+    <TextView
+        android:id="@+id/publication_edit_instruct"
+        android:layout_width="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="TextView"
+        android:textAlignment="center" />
+
     <com.balysv.materialripple.MaterialRippleLayout
         android:layout_width="wrap_content"
         android:layout_marginTop="5dp"
