--- a/app/src/main/res/layout/publication_element.xml
+++ b/app/src/main/res/layout/publication_element.xml
@@ -4,9 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    android:layout_height="match_parent">
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,7 +65,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
 
-                    android:background="@color/common_google_signin_btn_text_light_disabled"
+                    android:background="@drawable/round_btn"
                     android:src="@drawable/ic_flag"
                     android:tint="@color/colorRed" />
             </com.balysv.materialripple.MaterialRippleLayout>
@@ -92,6 +92,21 @@
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
+    <TextView
+        android:id="@+id/pub_elem_instruct"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Clicquez"
+        android:textAlignment="center"
+        android:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/pub_elem_progress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/progress"/>
     <ImageView
         android:layout_marginTop="5dp"
         android:id="@+id/pub_elem_image"
@@ -105,6 +120,7 @@
         app:srcCompat="@drawable/ic_menu_gallery" />
 
     <TextView
+        android:layout_marginTop="5dp"
         android:id="@+id/pub_elem_sondage_alert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
