--- a/app/src/main/res/layout/question_edit_element.xml
+++ b/app/src/main/res/layout/question_edit_element.xml
@@ -21,15 +21,16 @@
         <com.balysv.materialripple.MaterialRippleLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-        <ImageButton
-            android:id="@+id/sondage_edit_question_delete"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@color/common_google_signin_btn_text_dark_disabled"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:src="@drawable/ic_delete"
-            android:tint="@color/colorRed" />
+
+            <ImageButton
+                android:id="@+id/sondage_edit_question_delete"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/round_btn"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
+                android:src="@drawable/ic_delete"
+                android:tint="@color/colorRed" />
         </com.balysv.materialripple.MaterialRippleLayout>
     </LinearLayout>
 
